# Ollama-Rag-Test-1

./: README.md  main.py  pyproject.toml  requirements.txt  test.ipynb  test_pdf.ipynb  vector_db.py
chrome_langchain_db/: chroma.sqlite3
chrome_langchain_db_pdf/927eb1d1-5864-424f-836c-d23d8fc17a7e/: index_metadata.pickle
