[project]
name = "ollama-agent-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "pandas>=3.0.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
