[project]
name = "ollama-agent-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.4",
    "dotenv>=0.9.9",
    "langchain>=1.2.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.1",
    "pandas>=3.0.1",
    "pypdf>=6.8.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "typing>=3.10.0.0",
    "uuid>=1.30",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
